1. pequenas alteracoes no layout, 2.insercao do subtitulo na renderizacao de pagina

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,11 @@ code {
   min-width: 220px;
 }
 
-.my-text-yellow {
+#repository-name:hover {
+  cursor: pointer;
+  background-color: white;
+}
+
+#repository-name:hover, .my-text-yellow {
   color: #ffab40;
 }
